css/style.css
/* general rules */
*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

.container{
  padding-left: 10%;
  padding-right: 10%;
}


body{
  font-family: 'Raleway', sans-serif;
  color: #113949;
}

a{
    text-decoration: none;
}

.button{
  border-radius: 5px;
  border:1px solid #fe775a;
  color: #FFFFFF;
  background-color: #fe775a;
  text-decoration: none;
}


.fas.fa-check-circle{
  color: #ff7a59;
  padding-right: 17px;
}

.button.orange.big{
  padding: 15px 23px;
}

/* clearfix */
.row::after{
  content: "";
  display: table;
  clear: both;
}







/* header */

/* header{
  position: fixed;
  width: 100%;
  top: 0;
  z-index: 800;
} */

.chevron-down::before {
	border-style: solid;
	border-width: 0.25em 0.25em 0 0;
	content: '';
	display: inline-block;
	height: 0.45em;
	left: 0.15em;
	position: relative;
	top: 0.15em;
	transform: rotate(-45deg);
	vertical-align: top;
	width: 0.45em;
}

.chevron-down:before{
	top: 0;
	transform: rotate(135deg);
}





/*pre-nav */
.row{
  width: 100%;
  padding:right: 40px;
}


#backrowtop{
  background-color: #f5f8fa;
  height: 70px;
}

#backrowdown{
  background-color: #FFFFFF;
  border-top: 1px solid black;
}

.container-button{
    height: 55px;
    margin-top: -15px;
    font-size: 12px;
    padding-right: 203.113px;
}



.pre-nav .left-prenav{
    float: left;
    height: 70px;
    font-size: 14px;
}

.pre-nav .right-prenav{
  float: right;
}


.language-select{
    display: inline-block;
    margin-top: 27px;
    padding-right: 10px;
    border-right: 1px solid black;
}

.pre-nav a{
    color: #113949;
}

.contacts{
    display: inline-block;
    margin-top: 27px;
    padding-left: 10px;
}

#empty{
    background-color: #f5f8fa;
    color: #fe775a;
    margin: 0 20px;
}

.container-button a:last-child{
    color: #FFFFFF;
}

header .button{
    padding: 10px;
}

.fa-search {
  color: #00e7ff;
}






/* main nav */
nav{
    background-color: white;
}

nav img{
    margin-top: 20px;
}

.dropdown-menu{
    float: right;
    height: 70px;

}

header nav ul{
    margin-top: 27px;
    font-size: 14px;
}

header nav li{
    display: inline-block;
    margin: 0 5px;
}

header nav li:last-child{
    margin: 0;
}

header li a{
    color: #113949;
}

header li a i{
    margin: 0 6px;
}





/* jumbotron */
.backjumbo{
  background-color: #fff2ee;
}

.jumbotron{
  position: relative;
  height: 60vh;
  background-image: url("../img/jumbotron.png");
  background-size: 71%;
  background-position: 100% 11%;
  background-repeat: no-repeat;
}


.jumbotron > .jumbotext{
  position: absolute;
  left: 10%;
  top: 50px;
  width: 29%;
}

h1{
    font-size: 45px;
}

.jumbotron p{
    line-height: 25px;
    margin: 35px 0;
    font-size: 14px;
}

.jumbotron a{
    padding: 15px 30px;
    font-size: 12px;
}

.jumbotron h6{
    margin-top: 50px;
}
/* divider top section */
.header-divider{
  height: 70px;
  background-color: lightblue;
  border-top: 2px solid black;
  border-bottom: 2px solid black;
}







/* main */
.second-section-container{
  height: 160vh;
  background-color: #f5f8fa;
  padding-top: 30px;
  padding-bottom: 30px;
}

.cube{
  height: 200px;
  /* background-color: green; */
  margin-bottom: 30px;
  background-image: url("../img/cube.png");
  background-repeat: no-repeat;
  background-position: center center;
  background-size: contain;
}

.horizontal{
  position: relative;
  height: 110px;
  /* background-color: red; */
}

.horizontal-text{
  width: 52%;
  text-align: center;
  position: absolute;
  top: 25%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.horizonal-two{
  height: 300px;
  background-color: #FFFFFF;
  margin-bottom: 30px;
  border-radius: 5px;
}

.left-horizonal{
  padding-left: 143px;
  padding-right: 250px;
  width: 30%;
}



h2,p{
  margin-bottom: 10px;
}


#imgbook{
  height: 200px;
  width: 200px;
}

.section.main.first, .columns.mainsecond{
  box-shadow: 1px 1px 5px 1px rgb(226, 233, 239);
  border-radius: 5px;
}


.container.titlemain{
  text-align: center;
  padding-top: 80px;
}


.container.titlemain>img{
  width: 23%;
}


.container.titlemain>h2{
  font-size: 35px;
  padding-bottom: 35px;
}


.container.titlemain>p{
  font-weight: 200;
  padding-bottom: 50px;
  max-width: 900px;
  margin: 0 auto;
}





/*  main row first */
.section.main.first{
  background-color: #FFFFFF;
}

.columns{
  float: left;
}

.columns.mainfirstleft{
  width: 35%;
  padding-top: 60px;
  padding-left: 10%;
}

.columns.mainfirstleft>img{
  width: 41%;
  display: block;
}

.columns.mainfirstleft>button{
  margin-top: 40px;
  margin-left: 15px;
  padding-bottom: 60px;
}

.columns.mainfirstright{
  width: 50%;
  padding-top: 60px;
}

.columns.mainfirstright>h3{
  margin-bottom: 35px;
  font-weight: 600;
}

.columns.mainfirstright>p{
  line-height: 1.8;
  margin-bottom: 50px;
}

.columns.mainfirstright>div,.columns.mainfirstright>ul{
  padding-bottom: 40px;
}

.bold{
  font-weight: 600;
}

#linegrey{
  display: inline-block;
  width: 68%;
  height: 2px;
  margin-left: 5%;
  background-color: rgb(126, 136, 140);
  vertical-align: middle;
}

.columns.mainfirstright li{
  display: inline-block;
  padding-right: 30px;
}






/*  main row second */
.columns.mainsecond{
  width: calc(90% / 3);
  background-color: #fff;
  margin-top: 50px;
  margin-bottom: 50px;
}

.columns.mainsecond.central{
  margin-left: 5%;
  margin-right: 5%;
}

.boxcenter{
  text-align: center;
}

.columns.mainsecond img{
  height: 170px;
  margin-top: 40px;
  margin-bottom: 40px;
}

.columns.mainsecond h3{
  font-size: 25px;
  margin-bottom: 35px;
}

.columns.mainsecond p{
  padding: 20px 66px;
}

.columns.mainsecond hr{
  width: 80%;
  margin: 50px 10% 85px 10%;
  border: 1px solid rgb(126, 136, 140);
}

.columns.mainsecond span{
  font-size: 24px;
}

.columns.mainsecond ul{
  list-style-type: none;
  margin-left: 10%;
  margin-top: 30px;
}

.columns.mainsecond>button{
  margin: 45px 37%;
}


/* table */

.table{
  height: 50vh;
  background-image: linear-gradient(45deg
  ,#00a4bd,#00bda5);
  text-align: center;
}

.titlesectionthird{
  color: #fff;
  padding-top: 50px;
  padding-bottom: 50px;
}

.titlesectionthird>h2{
  font-size: 40px;
  padding-bottom: 30px;
}

.titlesectionthird>p{
  font-size: 17px;
  line-height: 1.8;
}

/* blockinfo */
.blockinfo{
  float: left;
}

.blockinfo.middle{
  height: 200px;
  width: 25%;
  color: #fff;
}

.blockinfo.middle.top{
  border-bottom: 1px solid #fff;
}

.blockinfo.middle.marginleft{
  border-left: 1px solid #fff;
}

.blockinfo.middle img{
  padding-top: 20px;
  padding-bottom: 20px;
}

.blockinfo.middle h2{
  font-size: 40px;
  padding-bottom: 18px;
}

.blockinfo.middle span{
  font-size: 15px;
  padding-bottom: 25px;
}

/* sponsor and call to sub */
.sponsor-row{
  background-color: #fff;
  height: 30vh;
  margin-left: 15%;
  margin-right: 15%;
  display: inline-block;
}

#counter{
  height: 200px;
  width: 20%;
  background-color: #fff;
  margin-right: 5%
}


.calltosub-row{
  background-color: #fff;
  height: 50vh;
}

footer{
  background-color: #2d3e50;
  height: 60vh;
}

